<resources>
    <string name="app_name">Pastillero</string>

<!--    Activity Main-->
    <string name="btnAboutUs">Sobre los Devs</string>

<!--    Actividad NuevoMed-->
    <string name="tstTiempoVacío">Error. Tiempo vacío</string>
    <string name="tstSeleccionNuevoMed">Es necesario seleccionar un nuevo medicamento</string>
    <string name="tstErrorCamara">Error al abrir la cámara</string>
    <string name="tstSinCodigo">Error. no hay código que leer</string>
    <string name="tstMedicamentoNoEncontrado">No se ha encontrado el medicamento</string>
    <string name="tstErrorCalendario">No se puedo abrir el calendario</string>

<!--    Actividad sobre nosotros-->
    <string name="tvTituloAboutUs">Roberto Garcia, ChenHang Zang</string>
    <string name="tvAboutUs">Somos dos programadores enfocados en el desarrollo nativo para Android, unidos por la curiosidad técnica y el deseo de crear soluciones móviles eficientes. Como estudiantes avanzados, nos dedicamos a transformar ideas complejas en interfaces intuitivas y código escalable.</string>
    <string name="tvTituloPerfilTécnico">Perfil Técnico</string>
    <string name="tvperfilTecnico">Lenguajes: Kotlin y Java.  Arquitectura: Implementación de Clean Architecture y patrones MVVM.  Interfaz de Usuario: Dominio de Jetpack Compose y XML.  Gestión de Datos: Manejo de Retrofit para APIs y Room para bases de datos locales.</string>
    <string name="btnCamara">Abrir cámara</string>
    <string name="btnCalendario">Añadir al calendario</string>
    <string name="BtnVolverInicio">Volver</string>
    <string name="tvInstruccionesMain">Pulsa la imagen para empezar a escanear medicamento</string>
    <string name="tvMedInstrucciones">Instrucciones</string>
    <string name="tvInstPaso1">1º Pulsa \"Abrir cámara\" y escanea el codigo de barras de tu medicamento.</string>
    <string name="tvInstPaso2">2º Una vez confirmado el medicamento, escribir la frecuencia del aviso en la casilla que pone tiempo.</string>
    <string name="tvInstPaso3">3º Pulsando \"Añadir al Calendario\" envia la informacion a tu Google Calendar y te notifica el numero que pusiste en dias. Mientras que \"Añadir medicina (horas)\" te lo notifica en horas.</string>
    <string name="hintTiempo">Tiempo</string>
    <string name="tvInstPaso4">4º Cada vez que te llegue una notificacion, pulsa aceptar tras administrar el medicamento.</string>
    <string name="btnHoras">Añadir medicina (horas)</string>
    <string name="txtNumeroNegativo">Error: El numero es negativo</string>
    <string name="txtRegistroCalendario">Lista de medicamentos en el calendario</string>
    <string name="txtListaRegistroHoras">Medicamentos con alarmas normales</string>
    <string name="txtRegistro">Medicamentos registrados</string>

</resources>